// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render correctly 1`] = `
<DocumentFragment>
  <div
    class="c-toggle test"
  >
    <input
      checked=""
      class="m-form__control--text c-toggle__input"
      data-testid="test"
      id="test"
      name="test"
      placeholder=""
      type="checkbox"
      value=""
    />
    <label
      class="m-form__label c-toggle__label"
      for="test"
    >
      <span
        class="c-toggle__text"
      >
        Test
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle should render correctly with defaults 1`] = `
<DocumentFragment>
  <div
    class="c-toggle"
  >
    <input
      class="m-form__control--text c-toggle__input"
      id="toggle"
      name="toggle"
      placeholder=""
      type="checkbox"
      value=""
    />
    <label
      class="m-form__label c-toggle__label"
      for="toggle"
    >
      <span
        class="c-toggle__text"
      />
    </label>
  </div>
</DocumentFragment>
`;
